[package]
name = "com-policy-config"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust bindings to IPolicyConfig COM API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
    "Devices_Custom"
]

[dev-dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Devices_FunctionDiscovery",
]